[package]
name = "humility-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
clap.workspace = true
fallible-iterator.workspace = true
gimli.workspace = true
goblin.workspace = true
hubpack.workspace = true
humility_load_derive.workspace = true
humility-arch-arm.workspace = true
humility-log.workspace = true
humpty.workspace = true
idol.workspace = true
indexmap.workspace = true
indicatif.workspace = true
log.workspace = true
multimap.workspace = true
num-derive.workspace = true
num-traits.workspace = true
parse_int.workspace = true
rayon.workspace = true
regex.workspace = true
ron.workspace = true
rusb.workspace = true
rustc-demangle.workspace = true
scroll.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
zerocopy.workspace = true
zip.workspace = true

#
# We depend on the oxide-stable branch of Oxide's fork of probe-rs to assure
# that we can float necessary patches on probe-rs.
#
probe-rs.workspace = true

#
# We need the fix for https://github.com/capstone-rust/capstone-rs/issues/84,
# which upstream seems uninterested in fixing.
#
capstone.workspace = true

#
# No one is happy about this.
#
[target.'cfg(not(windows))'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["netioapi"] }
