[package]
name = "humility-core"
version = "0.1.0"
edition.workspace = true
license = "MPL-2.0"

[dependencies]
addr2line.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
bitfield.workspace = true
capstone.workspace = true
clap.workspace = true
datamap.workspace = true
gimli.workspace = true
goblin.workspace = true
hubpack.workspace = true
hubtools.workspace = true
humility-arch-arm.workspace = true
humility-log.workspace = true
humility_load_derive.workspace = true
humpty.workspace = true
idol.workspace = true
indexmap.workspace = true
indicatif.workspace = true
measurement-token.workspace = true
multimap.workspace = true
num-derive.workspace = true
num-traits.workspace = true
parse_int.workspace = true
rayon.workspace = true
regex.workspace = true
ron.workspace = true
rustc-demangle.workspace = true
scroll.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
toml.workspace = true
zerocopy.workspace = true
zip.workspace = true
