[package]
name = "humility-doppel"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
zerocopy.workspace = true

humility.workspace = true
serde = { workspace = true, optional = true}
