[package]
name = "humility-dump"
version = "0.1.0"
edition.workspace = true

[dependencies]
# anyhow is only for compatibiltiy
anyhow.workspace = true
humility.workspace = true
thiserror.workspace = true
humility-dump-agent.workspace = true
humpty.workspace = true
slog.workspace = true

[dev-dependencies]
humility.workspace = true
humility-net.workspace = true
humility-log.workspace = true
