[package]
name = "humility-hiffy"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
hif.workspace = true
idol.workspace = true
parse_int.workspace = true
postcard.workspace = true
zerocopy.workspace = true

humility.workspace = true
humility-doppel.workspace = true
humility-idol.workspace = true
