[package]
name = "humility-hiffy"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
hif.workspace = true
idol.workspace = true
postcard.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

humility.workspace = true
humility-doppel.workspace = true
humility-idol.workspace = true
