[package]
name = "humility-net-core"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
humpty.workspace = true

humility.workspace = true
humility-dump-agent.workspace = true
humility-arch-arm.workspace = true
