[package]
name = "humility-net"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
humpty.workspace = true
thiserror.workspace = true

humility.workspace = true
humility-dump-agent.workspace = true
humility-arch-arm.workspace = true

# No one is happy about this.
[target.'cfg(not(windows))'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["netioapi"] }
