[package]
name = "humility-vpd-lib"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow is only for compatibiltiy
anyhow.workspace = true
hif.workspace = true
idol.workspace = true
tlvc.workspace = true
tlvc-text.workspace = true
humility-hiffy.workspace = true
humility-idol.workspace = true
humility.workspace = true
thiserror.workspace = true
indicatif.workspace = true

[dev-dependencies]
humility.workspace = true
humility-probes-core.workspace = true
