[package]
name = "humility-cmd-apptable"
version = "0.1.0"
edition = "2021"
description = "print Hubris apptable"

[dependencies]
humility = { path = "../../humility-core", package = "humility-core" }
humility-cmd = { path = "../../humility-cmd" }
anyhow = { version = "1.0.44", features = ["backtrace"] }
clap = { version = "3.0.12", features = ["derive", "env"] }
