[package]
name = "humility-cmd-apptable"
version = "0.1.0"
edition.workspace = true
description = "print Hubris apptable"

[dependencies]
humility = { workspace = true }
humility-cmd = { workspace = true }
humility-cli = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
