[package]
name = "humility-cmd-auxflash"
version = "0.1.0"
edition = "2021"
description = "manipulate auxiliary flash"

[dependencies]
hif.workspace = true
idol.workspace = true
tlvc.workspace = true

anyhow.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
log.workspace = true
parse_int.workspace = true

humility.workspace = true
humility-cmd.workspace = true
humility-cli.workspace = true
humility-hiffy.workspace = true
humility-idol.workspace = true
