[package]
name = "humility-cmd-caboose"
version = "0.1.0"
edition.workspace = true
description = "read from the caboose"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tlvc-text.workspace = true

humility-caboose.workspace = true
humility-cli.workspace = true
humility-probes-core.workspace = true
