[package]
name = "humility-cmd-console-proxy"
version = "0.1.0"
edition = "2021"
description = "SP/host console uart proxy"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
parse_int = { workspace = true }

humility = { workspace = true }
humility-cmd = { workspace = true }
cmd-hiffy = { workspace = true }

hif = { workspace = true }
idol = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
termios = { workspace = true }
