[package]
name = "humility-cmd-counters"
version = "0.1.0"
edition.workspace = true
description = "display event counters"

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

humility = { workspace = true }
humility-doppel = { workspace = true, features = ["serde"] }
humility-cmd = { workspace = true }
humility-cli  = {  workspace = true }
