[package]
name = "humility-cmd-dashboard"
version = "0.1.0"
edition = "2021"
description = "dashboard for Hubris sensor data"

[dependencies]
humility = { workspace = true }
humility-cmd = { workspace = true }
hif = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
parse_int = { workspace = true }
indexmap = { workspace = true }
idol = { workspace = true }
log = { workspace = true }
crossterm = { workspace = true }
tui = { workspace = true, features = ["crossterm"] }
