[package]
name = "humility-cmd-dashboard"
version = "0.1.0"
edition.workspace = true
description = "dashboard for Hubris sensor data"

[dependencies]
hif.workspace = true
clap.workspace = true
anyhow.workspace = true
parse_int.workspace = true
idol.workspace = true
crossterm.workspace = true
ratatui.workspace = true

humility.workspace = true
humility-cmd.workspace = true
humility-cli.workspace = true
humility-hiffy.workspace = true
humility-idol.workspace = true
