[package]
name = "humility-cmd-dashboard"
version = "0.1.0"
edition.workspace = true
description = "dashboard for Hubris sensor data"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
hif.workspace = true
idol.workspace = true
parse_int.workspace = true
ratatui.workspace = true

humility.workspace = true
humility-cli.workspace = true
humility-hiffy.workspace = true
humility-idol.workspace = true
