[package]
name = "humility-cmd-debugmailbox"
version = "0.1.0"
edition = "2021"
description = "interact with the debug mailbox on the LPC55"

[dependencies]
humility = { workspace = true }
humility-cortex = { workspace = true }
humility-cmd = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true, features = [ "full-syntax" ] }
strum = { workspace = true }
strum_macros = { workspace = true }
parse_int = { workspace = true }
byteorder = { workspace = true }
zerocopy = { workspace = true }
probe-rs = { workspace = true }
