[package]
name = "humility-cmd-debugmailbox"
version = "0.1.0"
edition = "2021"
description = "interact with the debug mailbox on the LPC55"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
clap.workspace = true
clap-num.workspace = true
parse_int.workspace = true
probe-rs.workspace = true

humility-cortex.workspace = true
humility-cmd.workspace = true
humility-cli.workspace = true
